--- a/src/app/pages/todo/todo.component.html
+++ b/src/app/pages/todo/todo.component.html
@@ -3,16 +3,35 @@
 </div>
 
 <div class="search">
-    <input placeholder="Digite sua tarefa...." type="text" name="" id="" [(ngModel)]="title" autofocus>
-    <button (click)="addTodo()" (keydown.enter)="addTodo()" color="primary">Adicionar</button>
+    <input placeholder="Digite sua tarefa...." (keyup.enter)="addTodo()" type="text" name="" id="" [(ngModel)]="title"
+        autofocus>
+    <button (click)="addTodo()" color="primary">Adicionar</button>
     <button data-bs-toggle="modal" data-bs-target="#exampleModal">Limpar Tarefas</button>
 </div>
 
 <div class="showTodo">
-    <ul>
-        <li *ngFor="let todo of todos">{{ todo.title }} <input type="checkbox" name="" id="">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Titulo</th>
+                <th scope="col">Feito</th>
+                <th scope="col">Excluir</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let todo of todos">
+                <th scope="row">{{ todo.id }}</th>
+                <td>{{ todo.title }}</td>
+                <td><input type="checkbox" name="" id="" (change)="setDone($event, todo.id)" [checked]="todo.done"></td>
+                <td><i (click)="deleteIndividualTodo(todo.id)" class="ph-bold ph-trash"></i></td>
+            </tr>
+        </tbody>
+    </table>
+    <!-- <ul>
+        <li> <input type="checkbox" name="" id="">
         </li>
-    </ul>
+    </ul> -->
 </div>
 
 
